--- a/163shop/manifest.json
+++ b/163shop/manifest.json
@@ -50,7 +50,7 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "",
+        "appid" : "wxdac677537920c121",
         "setting" : {
             "urlCheck" : false,
             "es6" : true
