--- a/163shop_server/package.json
+++ b/163shop_server/package.json
@@ -2,11 +2,13 @@
   "name": "163shop_server",
   "version": "1.0.0",
   "dependencies": {
+    "flyio": "^0.6.14",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-router": "^12.0.0",
     "nodemon": "^2.0.20"
   },
-  "scripts":{
-	  "start":"nodemon server.js"
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
